# palmieri

./: Cargo.toml
migrations/: 20230421172812_create_subscriptions_table.sql
src/: lib.rs  main.rs  palmieri.http
tests/: health_check.rs
