[package]
name = "palmieri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11.16"
